delete options added
